# github-dev-app

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  manifest.json
.github/: flowcrafter.yml  renovate.json
.github/workflows/: json.yml  markdown.yml  rust.yml  yaml.yml
src/: cli.rs  main.rs  manifest.rs
src/register/: app.rs  args.rs  command.rs  env.rs  form.rs  mod.rs  server.rs
templates/: form.html
tests/: help.rs  register.rs  version.rs
