[package]
name = "github-dev-app"
version = "0.1.0"
edition = "2021"

description = "A command-line tool that creates GitHub Apps for local development"
repository = "https://github.com/otterbuild/github-dev-app"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = "0.7.5"
clap = { version = "4.5.7", features = ["derive"] }
getset = "0.1.2"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
typed-builder = "0.18.2"
typed-fields = { version = "0.1.0", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.14"
indoc = "2.0.5"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
tempfile = "3.10.1"
